# gitronics

./: .gitignore  Cargo.toml  README.md  build_model.py  delete.py  index.html  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
0.5.10/: 404.html  index.html  sitemap.xml
0.5.10/best-practices/: index.html
0.5.10/changelog/: index.html
0.5.10/examples/: index.html
0.5.10/getting-started/: index.html
0.5.10/installation/: index.html
0.5.11/: 404.html  index.html  sitemap.xml
0.5.11/best-practices/: index.html
0.5.11/changelog/: index.html
0.5.11/examples/: index.html
0.5.11/getting-started/: index.html
0.5.11/installation/: index.html
0.5.12/: 404.html  index.html  sitemap.xml
0.5.12/best-practices/: index.html
0.5.12/changelog/: index.html
0.5.12/examples/: index.html
0.5.12/getting-started/: index.html
0.5.12/installation/: index.html
0.5.12/search/: search_index.json
0.5.13/: 404.html  index.html  sitemap.xml
0.5.13/best-practices/: index.html
0.5.13/changelog/: index.html
0.5.13/examples/: index.html
0.5.13/getting-started/: index.html
0.5.13/installation/: index.html
0.5.14/: 404.html  index.html  sitemap.xml
0.5.14/changelog/: index.html
0.5.15/: 404.html  index.html  sitemap.xml
0.5.16/: 404.html  index.html  requirements.txt  sitemap.xml
0.5.17/: 404.html  index.html  sitemap.xml
0.5.18/: 404.html  index.html  sitemap.xml
0.5.19/: 404.html  index.html  sitemap.xml
0.5.20/: 404.html  index.html  sitemap.xml
0.5.21/: 404.html  index.html  sitemap.xml
0.5.22/: 404.html  index.html  sitemap.xml
0.5.23/: 404.html  index.html  sitemap.xml
0.5.24/: 404.html  index.html  sitemap.xml
0.5.4/: 404.html  index.html  sitemap.xml
0.5.5/: 404.html  index.html  sitemap.xml
0.5.6/: 404.html  index.html  sitemap.xml
0.5.7/: 404.html  index.html  sitemap.xml
0.5.8/: 404.html  index.html  sitemap.xml
0.5.9/: 404.html  index.html  sitemap.xml
docs/: best-practices.md  best_practices.md  changelog.md  examples.md  getting-started.md  getting_started.md  index.md  installation.md
example_project/: build_model.py
old_example_project/: build_model.py
old_tests/: test_compose_model.py  test_file_readers.py  test_generate_model.py  test_model_manager.py
resources/: simple_model.mcnp
src/: build_model.rs  build_report.rs  cli.rs  lib.rs  main.rs  migrate_model.rs  model_config.rs  project_manager.rs  python.rs  report.css  types.rs  utils.rs
tests/: test_compose_model.py  test_example_project.rs  test_file_discovery.py  test_file_readers.py  test_generate_model.py  test_model_manager.py  test_project_checker.py  test_project_manager.py
(+258 files in other folders)
