[package]
name = "gitronics"
version = "0.1.0"
edition = "2024"
description = "Build MCNP neutronics models from modular components"
license = "EUPL-1.2"

[[bin]]
name = "gitronics"
path = "src/main.rs"

[lib]
name = "gitronics"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "auto-initialize"] }
migjorn = { version = "0.1.5" }
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.26"
thiserror = "2.0.18"
rayon = "1.12.0"
log = "0.4.29"
env_logger = "0.11"
chrono = "0.4"
regex = "1.12.3"
clap = { version = "4.6.1", features = ["derive"] }
indexmap = { version = "2.14.0", features = ["serde"] }
git2 = "0.21.0"

[dev-dependencies]
tempfile = "3.0"
