[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/_version.py"

[project]
name = "gitronics"
license = {file = "LICENSE.txt"}
dynamic = ["version"]
authors = [
  { name="Alvaro Cubi", email="cubiric@hotmail.com" },
]
description = "Automatically build an MCNP from a set of files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pandas", "PyYAML"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
