[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gitronics"
version = "0.1.0"
description = "Build MCNP neutronics models from modular components"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
gitronics = "gitronics:_cli_main"

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "gitronics.gitronics"
